--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
 	},
 	"dependencies": {
 		"bootstrap-icons": "^1.11.3",
+		"echarts": "^5.6.0",
+		"echarts-for-react": "^3.0.2",
+		"html2canvas": "^1.4.1",
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
