--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,6 +25,12 @@ jobs:
       - name: Install dependencies
         run: pnpm install
 
+      - name: Check formatting
+        run: pnpm run format:check
+
+      - name: Lint code
+        run: pnpm run lint
+
       - name: Build React app
         run: pnpm run build
 
