--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
 	"version": "0.0.0",
 	"type": "module",
 	"scripts": {
+		"setup": "pnpm install && pnpm run prepare",
 		"dev": "vite",
 		"start": "vite --open --host",
 		"build": "pnpm run lint && tsc -b && vite build",
 		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
 		"preview": "vite preview",
-		"format": "prettier --write . --ignore-path .prettierignore"
+		"format": "prettier --write src --ignore-path .prettierignore",
+		"format:check": "prettier --check src --ignore-path .prettierignore",
+		"verify": "pnpm run lint && pnpm run format:check",
+		"prepare": "husky"
 	},
 	"dependencies": {
 		"bootstrap-icons": "^1.11.3",
@@ -31,6 +35,7 @@
 		"eslint": "^8.57.0",
 		"eslint-plugin-react-hooks": "^4.6.2",
 		"eslint-plugin-react-refresh": "^0.4.7",
+		"husky": "^9.1.7",
 		"typescript": "^5.2.2",
 		"vite": "^5.3.4"
 	}
