--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-qrcode-logo": "^3.0.0",
 		"react-router-dom": "^6.25.1",
 		"sass": "^1.77.8"
 	},
