--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"echarts": "^5.6.0",
 		"echarts-for-react": "^3.0.2",
 		"html2canvas": "^1.4.1",
+		"idb": "^8.0.3",
 		"prettier": "^3.3.3",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
